# Rostark-Transcendence-Simulator

./: .gitignore  .pre-commit-config.yaml  Readme.md  pyproject.toml
games/: hellopygame.py  main.py
games/pakeages/: element.py  gameobject.py  random.py  random_object.py
tests/: Button.py  hello_pygame.py  mypy_example.py  random_test.py
